force-app/main/default/objects/pse__Resource_Request__c/fields/pse__Resource_Held__c.field-meta.xml
<CustomField>
    <fullName>pse__Resource_Held__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Resource Held</label>
    <type>Checkbox</type>
</CustomField>