force-app/main/default/objects/pse__Resource_Request__c/validationRules/pse__Check_Self_Nomination_Deadline_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>pse__Check_Self_Nomination_Deadline_Date</fullName>
    <active>true</active>
    <description>The date in the Self-Nomination Deadline field must be before the resource request end date.</description>
    <errorConditionFormula>pse__Self_Nomination_Deadline__c &gt;  pse__End_Date__c</errorConditionFormula>
    <errorMessage>The date in the Self-Nomination Deadline field must be before the resource request end date.</errorMessage>
</ValidationRule>