force-app/main/default/objects/pse__Resource_Request__c/listViews/psaws__Due_Resource_Requests.listView-meta.xml
<ListView>
    <fullName>psaws__Due_Resource_Requests</fullName>
    <columns>pse__Resource_Request_Name__c</columns>
    <columns>pse__Account__c</columns>
    <columns>pse__Project__c</columns>
    <columns>pse__Opportunity__c</columns>
    <columns>pse__Start_Date__c</columns>
    <columns>pse__End_Date__c</columns>
    <columns>pse__Request_Priority__c</columns>
    <columns>pse__SOW_Hours__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>psaws__Close_To_Start_Date__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>psaws__Requires_Staffing__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>psaws__Project_Manager_Is_Current_User__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Due Resource Requests</label>
</ListView>