force-app/main/default/objects/pse__Resource_Request__c/listViews/psaws__Open_Resource_Requests_Next_10_Days.listView-meta.xml
<ListView>
    <fullName>psaws__Open_Resource_Requests_Next_10_Days</fullName>
    <columns>NAME</columns>
    <columns>pse__Project__c</columns>
    <columns>pse__Resource_Role__c</columns>
    <columns>pse__Status__c</columns>
    <columns>pse__Start_Date__c</columns>
    <columns>pse__End_Date__c</columns>
    <columns>pse__SOW_Hours__c</columns>
    <columns>pse__Resource__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>pse__Status__c</field>
        <operation>notEqual</operation>
        <value>Cancelled</value>
    </filters>
    <filters>
        <field>pse__Assignment__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>pse__Start_Date__c</field>
        <operation>equals</operation>
        <value>NEXT_N_DAYS:10</value>
    </filters>
    <label>Open Resource Requests - Next 10 Days</label>
</ListView>