force-app/main/default/objects/pse__Resource_Request__c/listViews/pse__All.listView-meta.xml
<ListView>
    <fullName>pse__All</fullName>
    <columns>NAME</columns>
    <columns>pse__Request_Priority__c</columns>
    <columns>pse__Status__c</columns>
    <columns>pse__Resource__c</columns>
    <columns>pse__Project__c</columns>
    <columns>pse__Resource_Role__c</columns>
    <columns>pse__Start_Date__c</columns>
    <columns>pse__End_Date__c</columns>
    <columns>pse__Primary_Skill_Certification__c</columns>
    <columns>pse__SOW_Hours__c</columns>
    <columns>pse__Resource_Held__c</columns>
    <columns>pse__Staffer_Resource__c</columns>
    <columns>pse__Region__c</columns>
    <columns>pse__Practice__c</columns>
    <columns>pse__Group__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>pse__Status__c</field>
        <operation>equals</operation>
        <value>Draft,Ready to Staff,Hold,Tentative</value>
    </filters>
    <label>All</label>
</ListView>