force-app/main/default/objects/pse__Resource_Request__c/listViews/Strategic_IC_RRs.listView-meta.xml
<ListView>
    <fullName>Strategic_IC_RRs</fullName>
    <columns>NAME</columns>
    <columns>pse__Request_Priority__c</columns>
    <columns>pse__Status__c</columns>
    <columns>pse__Resource__c</columns>
    <columns>pse__Project__c</columns>
    <columns>pse__Resource_Role__c</columns>
    <columns>pse__Start_Date__c</columns>
    <columns>pse__End_Date__c</columns>
    <columns>pse__Primary_Skill_Certification__c</columns>
    <columns>pse__SOW_Hours__c</columns>
    <columns>pse__Resource_Held__c</columns>
    <columns>pse__Staffer_Resource__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>pse__Status__c</field>
        <operation>equals</operation>
        <value>Draft,Ready to Staff,Hold,Tentative</value>
    </filters>
    <filters>
        <field>pse__Resource_Role__c</field>
        <operation>equals</operation>
        <value>Implementation Consultant- Elite (IC),Project Manager,Trainer</value>
    </filters>
    <label>Strategic IC RRs</label>
</ListView>